chore: fix up gap between legend/title/label and description for formfields

--- a/components/o3-form/src/css/components/form-field.css
+++ b/components/o3-form/src/css/components/form-field.css
@@ -27,11 +27,19 @@
 		}
 	}
 
+	.o3-form-field__legend {
+		padding: 0 0 var(--o3-spacing-5xs) 0;
+	}
+
 	.o3-form-input__description {
 		font-size: var(--o3-font-size-metric2-0);
 		line-height: var(--o3-font-lineheight-metric2-0);
 		font-weight: var(--o3-font-weight-regular);
 		color: var(--o3-color-palette-black-60);
+	}
+
+	.o3-form-field__label + .o3-form-input__description, .o3-form-field__title + .o3-form-input__description {
+    margin-top: calc(-1 * var(--o3-spacing-4xs));
 	}
 }
 
